- major updates to template game

--- a/SCICompanion/Files/TemplateGame/SCI1.1/game.ini
+++ b/SCICompanion/Files/TemplateGame/SCI1.1/game.ini
@@ -14,7 +14,7 @@ n011=DisposeCode
 n013=AboutCode
 n015=Inventory
 n017=Smopper
-n018=SQEgo
+n018=GameEgo
 n020=DeathRoom
 n021=FlickerCycler
 n022=PriorityTalker
@@ -25,11 +25,11 @@ n030=ChoiceTalker
 n100=TitleScreen
 n956=ForwardCounter
 n110=rm110
-n990=SRDialog
+n990=SaveRestoreDialog
 n978=GameControls
 n998=Actor
 n986=Orbit
-n949=Blk
+n949=Block
 n921=Print
 n929=Sync
 n933=PseudoMouse
@@ -49,10 +49,10 @@ n934=Slider
 n935=Scaler
 n936=BorderWindow
 n937=IconItem
-n938=ROsc
-n939=Osc
+n938=RangeOscillate
+n939=Oscillate
 n941=RandCycle
-n942=MCyc
+n942=MoveCycle
 n943=PolygonEdit
 n944=FileSelector
 n945=PolyPath
@@ -68,7 +68,7 @@ n961=StopWalk
 n963=RelDPath
 n967=DCIcon
 n968=SmoothLooper
-n969=Rev
+n969=Reverse
 n970=Wander
 n972=Chase
 n973=Timer
@@ -85,7 +85,7 @@ n993=File
 n994=Game
 n995=InventoryItem
 n996=User
-n999=Obj
+n999=Object
 n012=ColorInit
 n982=Helpers
 n958=DisposeLoad
@@ -98,6 +98,7 @@ n016=DebugRoomInit
 Name=New Game
 ScummId=lsl6-cd
 Language=sc
+ExeProfile=DOSBox
 
 [Map]
 n65535=n0-1
