--- a/SCICompanion/SCICompanion.vcxproj
+++ b/SCICompanion/SCICompanion.vcxproj
@@ -1735,8 +1735,8 @@ xcopy /S /Y /I /D "$(ProjectDir)Files\Objects" "$(OutDir)Objects"
     <None Include="Files\TemplateGame\SCI1.1\src\Approach.sco" />
     <None Include="Files\TemplateGame\SCI1.1\src\bea.sco" />
     <None Include="Files\TemplateGame\SCI1.1\src\beaclimbsout.sco" />
-    <None Include="Files\TemplateGame\SCI1.1\src\Blk.sc" />
-    <None Include="Files\TemplateGame\SCI1.1\src\Blk.sco" />
+    <None Include="Files\TemplateGame\SCI1.1\src\Block.sc" />
+    <None Include="Files\TemplateGame\SCI1.1\src\Block.sco" />
     <None Include="Files\TemplateGame\SCI1.1\src\BorderWindow.sc" />
     <None Include="Files\TemplateGame\SCI1.1\src\BorderWindow.sco" />
     <None Include="Files\TemplateGame\SCI1.1\src\Chase.sc" />
@@ -1810,6 +1810,8 @@ xcopy /S /Y /I /D "$(ProjectDir)Files\Objects" "$(OutDir)Objects"
     <None Include="Files\TemplateGame\SCI1.1\src\game.sh" />
     <None Include="Files\TemplateGame\SCI1.1\src\GameControls.sc" />
     <None Include="Files\TemplateGame\SCI1.1\src\GameControls.sco" />
+    <None Include="Files\TemplateGame\SCI1.1\src\GameEgo.sc" />
+    <None Include="Files\TemplateGame\SCI1.1\src\GameEgo.sco" />
     <None Include="Files\TemplateGame\SCI1.1\src\Gauge.sc" />
     <None Include="Files\TemplateGame\SCI1.1\src\Gauge.sco" />
     <None Include="Files\TemplateGame\SCI1.1\src\genetix.sco" />
@@ -1837,22 +1839,22 @@ xcopy /S /Y /I /D "$(ProjectDir)Files\Objects" "$(OutDir)Objects"
     <None Include="Files\TemplateGame\SCI1.1\src\logevent.sco" />
     <None Include="Files\TemplateGame\SCI1.1\src\Main.sc" />
     <None Include="Files\TemplateGame\SCI1.1\src\Main.sco" />
-    <None Include="Files\TemplateGame\SCI1.1\src\MCyc.sc" />
-    <None Include="Files\TemplateGame\SCI1.1\src\MCyc.sco" />
     <None Include="Files\TemplateGame\SCI1.1\src\MessageObj.sc" />
     <None Include="Files\TemplateGame\SCI1.1\src\MessageObj.sco" />
     <None Include="Files\TemplateGame\SCI1.1\src\Messager.sc" />
     <None Include="Files\TemplateGame\SCI1.1\src\Messager.sco" />
+    <None Include="Files\TemplateGame\SCI1.1\src\MoveCycle.sc" />
+    <None Include="Files\TemplateGame\SCI1.1\src\MoveCycle.sco" />
     <None Include="Files\TemplateGame\SCI1.1\src\MoveFwd.sc" />
     <None Include="Files\TemplateGame\SCI1.1\src\MoveFwd.sco" />
     <None Include="Files\TemplateGame\SCI1.1\src\multiprop.sco" />
     <None Include="Files\TemplateGame\SCI1.1\src\mypuke.sco" />
-    <None Include="Files\TemplateGame\SCI1.1\src\Obj.sc" />
-    <None Include="Files\TemplateGame\SCI1.1\src\Obj.sco" />
+    <None Include="Files\TemplateGame\SCI1.1\src\Object.sc" />
+    <None Include="Files\TemplateGame\SCI1.1\src\Object.sco" />
     <None Include="Files\TemplateGame\SCI1.1\src\Orbit.sc" />
     <None Include="Files\TemplateGame\SCI1.1\src\Orbit.sco" />
-    <None Include="Files\TemplateGame\SCI1.1\src\Osc.sc" />
-    <None Include="Files\TemplateGame\SCI1.1\src\Osc.sco" />
+    <None Include="Files\TemplateGame\SCI1.1\src\Oscillate.sc" />
+    <None Include="Files\TemplateGame\SCI1.1\src\Oscillate.sco" />
     <None Include="Files\TemplateGame\SCI1.1\src\PAvoider.sc" />
     <None Include="Files\TemplateGame\SCI1.1\src\PAvoider.sco" />
     <None Include="Files\TemplateGame\SCI1.1\src\PChase.sc" />
@@ -1876,18 +1878,20 @@ xcopy /S /Y /I /D "$(ProjectDir)Files\Objects" "$(OutDir)Objects"
     <None Include="Files\TemplateGame\SCI1.1\src\quirk.sco" />
     <None Include="Files\TemplateGame\SCI1.1\src\RandCycle.sc" />
     <None Include="Files\TemplateGame\SCI1.1\src\RandCycle.sco" />
+    <None Include="Files\TemplateGame\SCI1.1\src\RangeOscillate.sc" />
+    <None Include="Files\TemplateGame\SCI1.1\src\RangeOscillate.sco" />
     <None Include="Files\TemplateGame\SCI1.1\src\RegionPath.sc" />
     <None Include="Files\TemplateGame\SCI1.1\src\RegionPath.sco" />
     <None Include="Files\TemplateGame\SCI1.1\src\RelDPath.sc" />
     <None Include="Files\TemplateGame\SCI1.1\src\RelDPath.sco" />
-    <None Include="Files\TemplateGame\SCI1.1\src\Rev.sc" />
-    <None Include="Files\TemplateGame\SCI1.1\src\Rev.sco" />
+    <None Include="Files\TemplateGame\SCI1.1\src\Reverse.sc" />
+    <None Include="Files\TemplateGame\SCI1.1\src\Reverse.sco" />
     <None Include="Files\TemplateGame\SCI1.1\src\rm001.sco" />
     <None Include="Files\TemplateGame\SCI1.1\src\rm106.sco" />
     <None Include="Files\TemplateGame\SCI1.1\src\rm110.sc" />
     <None Include="Files\TemplateGame\SCI1.1\src\rm110.sco" />
-    <None Include="Files\TemplateGame\SCI1.1\src\ROsc.sc" />
-    <None Include="Files\TemplateGame\SCI1.1\src\ROsc.sco" />
+    <None Include="Files\TemplateGame\SCI1.1\src\SaveRestoreDialog.sc" />
+    <None Include="Files\TemplateGame\SCI1.1\src\SaveRestoreDialog.sco" />
     <None Include="Files\TemplateGame\SCI1.1\src\sbar.sco" />
     <None Include="Files\TemplateGame\SCI1.1\src\Scaler.sc" />
     <None Include="Files\TemplateGame\SCI1.1\src\Scaler.sco" />
@@ -1917,10 +1921,6 @@ xcopy /S /Y /I /D "$(ProjectDir)Files\Objects" "$(OutDir)Objects"
     <None Include="Files\TemplateGame\SCI1.1\src\SpeakWindow.sc" />
     <None Include="Files\TemplateGame\SCI1.1\src\SpeakWindow.sco" />
     <None Include="Files\TemplateGame\SCI1.1\src\spushbuttons.sco" />
-    <None Include="Files\TemplateGame\SCI1.1\src\SQEgo.sc" />
-    <None Include="Files\TemplateGame\SCI1.1\src\SQEgo.sco" />
-    <None Include="Files\TemplateGame\SCI1.1\src\SRDialog.sc" />
-    <None Include="Files\TemplateGame\SCI1.1\src\SRDialog.sco" />
     <None Include="Files\TemplateGame\SCI1.1\src\sspikecomments.sco" />
     <None Include="Files\TemplateGame\SCI1.1\src\ssquishmonkeys.sco" />
     <None Include="Files\TemplateGame\SCI1.1\src\sstartviewport.sco" />
