--- a/SCICompanion/SCICompanion.vcxproj.filters
+++ b/SCICompanion/SCICompanion.vcxproj.filters
@@ -2185,8 +2185,6 @@
     <None Include="Files\TemplateGame\SCI1.1\src\Gauge.sco" />
     <None Include="Files\TemplateGame\SCI1.1\src\Grooper.sc" />
     <None Include="Files\TemplateGame\SCI1.1\src\Grooper.sco" />
-    <None Include="Files\TemplateGame\SCI1.1\src\Helpers.sc" />
-    <None Include="Files\TemplateGame\SCI1.1\src\Helpers.sco" />
     <None Include="Files\TemplateGame\SCI1.1\src\Inset.sc" />
     <None Include="Files\TemplateGame\SCI1.1\src\Inset.sco" />
     <None Include="Files\TemplateGame\SCI1.1\src\Jump.sc" />
@@ -3484,6 +3482,8 @@
     <None Include="Files\TemplateGame\SCI1.1\src\Reverse.sco" />
     <None Include="Files\TemplateGame\SCI1.1\src\SaveRestoreDialog.sc" />
     <None Include="Files\TemplateGame\SCI1.1\src\SaveRestoreDialog.sco" />
+    <None Include="Files\TemplateGame\SCI1.1\src\Sight.sc" />
+    <None Include="Files\TemplateGame\SCI1.1\src\Sight.sco" />
   </ItemGroup>
   <ItemGroup>
     <Manifest Include="res\SCICompanion.manifest" />
