- orig SCI Syntax changes

--- a/SCICompanion/Files/Decompiler/Decompiler.ini
+++ b/SCICompanion/Files/Decompiler/Decompiler.ini
@@ -40,7 +40,7 @@ pvType = [ "pv.*" ]
 msgType = [ "msg.*" ]
 evMsgType = [ "KEY_.*", "JOY_.*" ]
 evModType = [ "em.*" ]
-signalType = [ "notUpd" ,"fixPriOn" ,"isExtra" ,"noTurn" ,"noCycler" ,"ignoreHorizon" , "ignAct" ]
+signalType = [ "notUpd" ,"fixPriOn" ,"isExtra" ,"noTurn" ,"skipCheck" ,"ignoreHorizon" , "ignAct" ]
 memType = [ "mem.*" ]
  
 [commonSwitchValueTypes]
