--- a/SCICompanionLib/SCICompanionLib.rc
+++ b/SCICompanionLib/SCICompanionLib.rc
@@ -776,11 +776,12 @@ BEGIN
     VK_F11,         ID_STOP,                VIRTKEY, NOINVERT
     VK_F7,          ID_STOPDEBUG,           VIRTKEY, NOINVERT
     "E",            ID_TOGGLEEGO,           VIRTKEY, CONTROL, NOINVERT
+    "L",            ID_TOGGLEGRIDLINES,     VIRTKEY, CONTROL, NOINVERT
     "B",            ID_VIEW_PASTESPECIAL,   VIRTKEY, CONTROL, NOINVERT
     "B",            ID_VIEW_PASTESPECIALTRANSPARENT, VIRTKEY, SHIFT, CONTROL, NOINVERT
     VK_OEM_PLUS,    ID_VIEW_ZOOMIN,         VIRTKEY, CONTROL, NOINVERT
     VK_OEM_MINUS,   ID_VIEW_ZOOMOUT,        VIRTKEY, CONTROL, NOINVERT
-    "L",            ID_TOGGLEGRIDLINES,     VIRTKEY, CONTROL, NOINVERT
+    "C",            ID_CONVERT_SCRIPT,      VIRTKEY, SHIFT, CONTROL, NOINVERT
 END
 
 IDR_ACCELERATORPICCOMMANDS ACCELERATORS
