- remove extraneous syntax tree objects - handle unsigned comparison operators for SCI syntax

--- a/SCICompanionLib/SCICompanionLib.vcxproj
+++ b/SCICompanionLib/SCICompanionLib.vcxproj
@@ -207,6 +207,7 @@
     <ClCompile Include="Src\Compile\OutputCppSourceCode.cpp" />
     <ClCompile Include="Src\Compile\OutputSCISourceCode.cpp" />
     <ClCompile Include="Src\Compile\OutputSCIStudioSourceCode.cpp" />
+    <ClCompile Include="Src\Compile\SCISyntaxParser.cpp" />
     <ClCompile Include="Src\Compile\ScriptMakerHelper.cpp" />
     <ClCompile Include="Src\Compile\SummarizeScript.cpp" />
     <ClCompile Include="Src\Compile\TarjanAlgorithm.cpp" />
