--- a/SCICompanionLib/SCICompanionLib.vcxproj.filters
+++ b/SCICompanionLib/SCICompanionLib.vcxproj.filters
@@ -789,6 +789,9 @@
     <ClCompile Include="Src\Util\ClipboardUtil.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Src\Compile\SCISyntaxParser.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="SCICompanionLib.h">
