--- a/SCICompanionLib/SCICompanionLib.vcxproj.filters
+++ b/SCICompanionLib/SCICompanionLib.vcxproj.filters
@@ -492,9 +492,6 @@
     <ClCompile Include="Src\FrameComponents\PicCommandSidePane.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="Src\Compile\SCIStudioSyntaxParser.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="Src\Resources\Font.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
@@ -790,6 +787,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="Src\Compile\SCISyntaxParser.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Src\Compile\StudioSyntaxParser.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
@@ -1325,9 +1325,6 @@
     <ClInclude Include="Src\Compile\OutputSCISourceCode.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="Src\Compile\SCIStudioSyntaxParser.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="Src\Resources\Font.h">
       <Filter>Header Files</Filter>
     </ClInclude>
@@ -1683,6 +1680,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Src\MFCViews\FakeEgo.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Src\Compile\StudioSyntaxParser.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
