--- a/SCICompanionLib/SCICompanionLib.vcxproj.filters
+++ b/SCICompanionLib/SCICompanionLib.vcxproj.filters
@@ -465,9 +465,6 @@
     <ClCompile Include="Src\Util\ImageUtil.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="Src\Compile\OutputSCIStudioSourceCode.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="Src\Compile\OutputCppSourceCode.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
@@ -793,6 +790,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="Src\Compile\OperatorTables.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Src\Compile\OutputStudioSourceCode.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
@@ -1304,9 +1304,6 @@
     <ClInclude Include="Src\Compile\OutputCodeHelper.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="Src\Compile\OutputSCIStudioSourceCode.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="Src\Compile\OutputSourceCodeBase.h">
       <Filter>Header Files</Filter>
     </ClInclude>
@@ -1692,6 +1689,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Src\Compile\OperatorTables.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Src\Compile\OutputStudioSourceCode.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
