--- a/SCICompanionLib/SCICompanionLib.vcxproj
+++ b/SCICompanionLib/SCICompanionLib.vcxproj
@@ -297,6 +297,7 @@
     <ClInclude Include="Src\Compile\NodeTypes.h" />
     <ClInclude Include="Src\Compile\Operators.h" />
     <ClInclude Include="Src\Compile\OperatorTables.h" />
+    <ClInclude Include="Src\Compile\SCISyntaxParser.h" />
     <ClInclude Include="Src\cpptoml\cpptoml.h" />
     <ClInclude Include="Src\Dialogs\AudioEditDialog.h" />
     <ClInclude Include="Src\Dialogs\AudioPreferencesDialog.h" />
