- figure out how to properly set language setting for scripts - insert object/method now obey language settings - remove unneeded cpp header files - polish/formalize the convert single script experience

--- a/SCICompanionLib/SCICompanionLib.vcxproj
+++ b/SCICompanionLib/SCICompanionLib.vcxproj
@@ -843,6 +843,7 @@
     <Image Include="res\clonemessageentry.ico" />
     <Image Include="res\CloseActive.bmp" />
     <Image Include="res\CloseInactive.bmp" />
+    <Image Include="res\convert.ico" />
     <Image Include="res\cursor.ico" />
     <Image Include="res\debug.ico" />
     <Image Include="res\debug_room.ico" />
