--- a/SCICompanionLib/SCICompanionLib.vcxproj.filters
+++ b/SCICompanionLib/SCICompanionLib.vcxproj.filters
@@ -2273,5 +2273,8 @@
     <Image Include="res\bitmapob.bmp">
       <Filter>Resource Files</Filter>
     </Image>
+    <Image Include="res\convert.ico">
+      <Filter>Resource Files</Filter>
+    </Image>
   </ItemGroup>
 </Project>
