- support for SCI strings (underscores and such) - fix string syntax highlighting

--- a/SCICompanion/SCICompanion.vcxproj
+++ b/SCICompanion/SCICompanion.vcxproj
@@ -98,6 +98,7 @@ xcopy /S /Y /I /D "$(ProjectDir)Help" "$(OutDir)Help"
 
 xcopy /S /Y /I /D "$(ProjectDir)Files\Samples" "$(OutDir)Samples"
 xcopy /S /Y /I /D "$(ProjectDir)Files\Decompiler" "$(OutDir)Decompiler"
+xcopy /S /Y /I /D "$(ProjectDir)Files\Customization" "$(OutDir)Customization"
 xcopy /S /Y /I /D "$(ProjectDir)Files\Objects" "$(OutDir)Objects"
  xcopy /S /Y /I /D "$(ProjectDir)Tools" "$(OutDir)Tools"
 </Command>
@@ -136,6 +137,7 @@ xcopy /S /Y /I /D "$(ProjectDir)Help" "$(OutDir)Help"
 
 xcopy /S /Y /I /D "$(ProjectDir)Files\Samples" "$(OutDir)Samples"
 xcopy /S /Y /I /D "$(ProjectDir)Files\Decompiler" "$(OutDir)Decompiler"
+xcopy /S /Y /I /D "$(ProjectDir)Files\Customization" "$(OutDir)Customization"
 xcopy /S /Y /I /D "$(ProjectDir)Files\Objects" "$(OutDir)Objects"
  xcopy /S /Y /I /D "$(ProjectDir)Tools" "$(OutDir)Tools"
 </Command>
@@ -178,6 +180,7 @@ xcopy /S /Y /I /D "$(ProjectDir)Help" "$(OutDir)Help"
 
 xcopy /S /Y /I /D "$(ProjectDir)Files\Samples" "$(OutDir)Samples"
 xcopy /S /Y /I /D "$(ProjectDir)Files\Decompiler" "$(OutDir)Decompiler"
+xcopy /S /Y /I /D "$(ProjectDir)Files\Customization" "$(OutDir)Customization"
 xcopy /S /Y /I /D "$(ProjectDir)Files\Objects" "$(OutDir)Objects"
  xcopy /S /Y /I /D "$(ProjectDir)Tools" "$(OutDir)Tools"
 </Command>
@@ -1544,6 +1547,7 @@ xcopy /S /Y /I /D "$(ProjectDir)Files\Objects" "$(OutDir)Objects"
     <None Include="Files\CompileInclude\kernels.scp" />
     <None Include="Files\CompileInclude\keys.sh" />
     <None Include="Files\CompileInclude\sci.sh" />
+    <None Include="Files\Customization\syntaxcolor.ini" />
     <None Include="Files\Decompiler\Decompiler.ini" />
     <None Include="Files\Decompiler\game.sh" />
     <None Include="Files\Licenses\cppformat_README.rst" />
@@ -1611,7 +1615,6 @@ xcopy /S /Y /I /D "$(ProjectDir)Files\Objects" "$(OutDir)Objects"
     <None Include="Files\Samples\views\Ego.bin" />
     <None Include="Files\Samples\views\Inv - Key.bin" />
     <None Include="Files\Samples\views\Key.bin" />
-    <None Include="Files\syntaxcolor.ini" />
     <None Include="Files\TemplateGame\SCI0\ADL.DRV" />
     <None Include="Files\TemplateGame\SCI0\dosbox.conf" />
     <None Include="Files\TemplateGame\SCI0\EGA320.DRV" />
