--- a/SCICompanion/SCICompanion.vcxproj.filters
+++ b/SCICompanion/SCICompanion.vcxproj.filters
@@ -3482,7 +3482,7 @@
     <None Include="Files\TemplateGame\SCI1.1\src\SaveRestoreDialog.sco" />
     <None Include="Files\TemplateGame\SCI1.1\src\Sight.sc" />
     <None Include="Files\TemplateGame\SCI1.1\src\Sight.sco" />
-    <None Include="Files\syntaxcolor.ini" />
+    <None Include="Files\Customization\syntaxcolor.ini" />
   </ItemGroup>
   <ItemGroup>
     <Manifest Include="res\SCICompanion.manifest" />
