--- a/SCICompanionLib/SCICompanionLib.rc
+++ b/SCICompanionLib/SCICompanionLib.rc
@@ -605,6 +605,7 @@ BEGIN
         END
         MENUITEM "Go to definition",            33021
         MENUITEM SEPARATOR
+        MENUITEM "Toggle block comment",        ID_MAIN_TOGGLEBLOCKCOMMENT
         MENUITEM "Goto",                        ID_GOTOSCRIPT
         MENUITEM SEPARATOR
         MENUITEM "Reload syntax colors",        ID_MAIN_RELOADSYNTAXCOLORS
@@ -750,6 +751,7 @@ BEGIN
     VK_F8,          ID_COMPILE,             VIRTKEY, NOINVERT
     VK_F8,          ID_COMPILEALL,          VIRTKEY, CONTROL, ALT, NOINVERT
     "D",            ID_COMPILEDOCS,         VIRTKEY, SHIFT, CONTROL, NOINVERT
+    "C",            ID_CONVERT_SCRIPT,      VIRTKEY, SHIFT, CONTROL, NOINVERT
     VK_F6,          ID_DEBUGGAME,           VIRTKEY, NOINVERT
     "C",            ID_EDIT_COPY,           VIRTKEY, CONTROL, NOINVERT
     VK_INSERT,      ID_EDIT_COPY,           VIRTKEY, CONTROL, NOINVERT
@@ -785,7 +787,7 @@ BEGIN
     "B",            ID_VIEW_PASTESPECIALTRANSPARENT, VIRTKEY, SHIFT, CONTROL, NOINVERT
     VK_OEM_PLUS,    ID_VIEW_ZOOMIN,         VIRTKEY, CONTROL, NOINVERT
     VK_OEM_MINUS,   ID_VIEW_ZOOMOUT,        VIRTKEY, CONTROL, NOINVERT
-    "C",            ID_CONVERT_SCRIPT,      VIRTKEY, SHIFT, CONTROL, NOINVERT
+    "Q",            ID_MAIN_TOGGLEBLOCKCOMMENT, VIRTKEY, CONTROL, NOINVERT
 END
 
 IDR_ACCELERATORPICCOMMANDS ACCELERATORS
@@ -3353,6 +3355,7 @@ END
 STRINGTABLE
 BEGIN
     ID_MAIN_RELOADSYNTAXCOLORS "Reload colors from syntaxcolor.ini"
+    ID_MAIN_TOGGLEBLOCKCOMMENT "Comment or uncomment a block of code"
 END
 
 #endif    // English (United States) resources
