- template game script file rename (MessageOBj -> Conversation, OBject -> System)

--- a/SCICompanion/Files/TemplateGame/SCI1.1/game.ini
+++ b/SCICompanion/Files/TemplateGame/SCI1.1/game.ini
@@ -40,7 +40,7 @@ n877=SpeakWindow
 n922=DialogControls
 n923=Inset
 n924=Messager
-n925=MessageObj
+n925=Conversation
 n927=PAvoider
 n928=Talker
 n930=PChase
@@ -85,7 +85,7 @@ n993=File
 n994=Game
 n995=InventoryItem
 n996=User
-n999=Object
+n999=System
 n012=ColorInit
 n982=Sight
 n958=DisposeLoad
