- small doc change and add missing dos

--- a/SCICompanion/SCICompanion.vcxproj.filters
+++ b/SCICompanion/SCICompanion.vcxproj.filters
@@ -3482,6 +3482,40 @@
     <None Include="Files\TemplateGame\SCI1.1\src\Conversation.sco" />
     <None Include="Files\TemplateGame\SCI1.1\src\System.sc" />
     <None Include="Files\TemplateGame\SCI1.1\src\System.sco" />
+    <None Include="Docs\source\studio_compiler.rst" />
+    <None Include="Docs\source\StudioCompiler\arithmetic.rst" />
+    <None Include="Docs\source\StudioCompiler\asm.rst" />
+    <None Include="Docs\source\StudioCompiler\assignment.rst" />
+    <None Include="Docs\source\StudioCompiler\bitwise.rst" />
+    <None Include="Docs\source\StudioCompiler\break.rst" />
+    <None Include="Docs\source\StudioCompiler\classes.rst" />
+    <None Include="Docs\source\StudioCompiler\classheader.rst" />
+    <None Include="Docs\source\StudioCompiler\codeblock.rst" />
+    <None Include="Docs\source\StudioCompiler\comment.rst" />
+    <None Include="Docs\source\StudioCompiler\conditionalexpressions.rst" />
+    <None Include="Docs\source\StudioCompiler\define.rst" />
+    <None Include="Docs\source\StudioCompiler\do.rst" />
+    <None Include="Docs\source\StudioCompiler\for.rst" />
+    <None Include="Docs\source\StudioCompiler\if.rst" />
+    <None Include="Docs\source\StudioCompiler\include.rst" />
+    <None Include="Docs\source\StudioCompiler\objectfiles.rst" />
+    <None Include="Docs\source\StudioCompiler\otheroperators.rst" />
+    <None Include="Docs\source\StudioCompiler\procedures.rst" />
+    <None Include="Docs\source\StudioCompiler\properties.rst" />
+    <None Include="Docs\source\StudioCompiler\relationaloperators.rst" />
+    <None Include="Docs\source\StudioCompiler\rest.rst" />
+    <None Include="Docs\source\StudioCompiler\return.rst" />
+    <None Include="Docs\source\StudioCompiler\saids.rst" />
+    <None Include="Docs\source\StudioCompiler\selectors.rst" />
+    <None Include="Docs\source\StudioCompiler\sendselfsuper.rst" />
+    <None Include="Docs\source\StudioCompiler\strings.rst" />
+    <None Include="Docs\source\StudioCompiler\switch.rst" />
+    <None Include="Docs\source\StudioCompiler\synonyms.rst" />
+    <None Include="Docs\source\StudioCompiler\use.rst" />
+    <None Include="Docs\source\StudioCompiler\variables.rst" />
+    <None Include="Docs\source\StudioCompiler\variabletypes.rst" />
+    <None Include="Docs\source\StudioCompiler\version.rst" />
+    <None Include="Docs\source\StudioCompiler\while.rst" />
   </ItemGroup>
   <ItemGroup>
     <Manifest Include="res\SCICompanion.manifest" />
